--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Hello World
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Сортировка массива</title>
+</head>
+<body>
+    <h4>igor</h4>
+    <script>
+        const url = window.location.href;
+        let param = url.substring(url.indexOf("?")+1);
+
+        param = param.replace('[', '');
+        param = param.replace(']', '');
+        
+
+        const array = param.split(',');
+
+        let result = array.map(function (x) {
+            return parseInt(x, 10);
+        });
+
+        array.sort((a, b) => a - b); 
+
+        const answer = array.toString();
+
+            // Выводим результат в заголовок окна
+            document.title = answer;
+
+
+        
+    </script>
+</body>
+</html>
