--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Сортировка массива</title>
 </head>
 <body>
-    <h4>igor</h4>
+    <h4>dorinasty1201</h4>
     <script>
         const url = window.location.href;
         let param = url.substring(url.indexOf("?")+1);
