--- a/index.html
+++ b/index.html
@@ -6,25 +6,24 @@
     <title>Сортировка массива</title>
 </head>
 <body>
-    <h4>dorinasty1201</h4>
+    <h4>dorinasty1201</h4> 
     <script>
         const url = window.location.href;
         let param = url.substring(url.indexOf("?")+1);
+
+        param = param.replace('[', '');
+        param = param.replace(']', '');
         
-        function isPrime(num) {
-        for (let i = 2; i < num; i++) {
-            if (num % i === 0) return false;
-        }
-        return num !== 1;
-}
 
-        param = +param;
-        let cnt = 1;
-        for (let i = 3; i <= param; i++) {
-                if (isPrime(i)) cnt++;
-        }
+        const array = param.split(',');
 
-        const answer = cnt.toString();
+        let result = array.map(function (x) {
+            return parseInt(x, 10);
+        });
+
+        array.sort((a, b) => a - b); 
+
+        const answer = array.toString();
 
             // Выводим результат в заголовок окна
             document.title = answer;
